<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">New Mom Quiz</string>
    <string name="first_question">What color was used for boys in the 1900\'s?</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="green">Green</string>
    <string name="second_question">How often is a baby born?</string>
    <string name="three_seconds">Every 3 Seconds</string>
    <string name="one_second">Every second</string>
    <string name="ten_seconds">Every 10 seconds</string>
    <string name="third_question">When does a baby get his/her fingerprints?</string>
    <string name="three_months">3 months in fetus</string>
    <string name="six_months">6 months in fetus</string>
    <string name="after_born">After born</string>
    <string name="fourth_question">Babies recognize their mother\'s voice at birth. How long before they recognize their father\'s?</string>
    <string name="one_week">1 week</string>
    <string name="two_weeks">14 days</string>
    <string name="one_month">7 days</string>
    <string name="five_question">What is the first sense a baby develops?</string>
    <string name="smell_opt">Smell</string>
    <string name="hearing_opt">Hearing</string>
    <string name="touch_opt">Touch</string>
    <string name="sixth_question">How many diapers does the average baby go through in one year?</string>
    <string name="two_and_half_k">2500</string>
    <string name="five_k">500</string>
    <string name="seven_and_half_K">7500</string>
    <string name="seventh_question">When newborn babies cry they produce tears.</string>
    <string name="true_option">True</string>
    <string name="false_option">False</string>
    <string name = "eighth_question">What percentage of babies actually arrive on their due date?</string>
    <string name = "less_than_2_percent">> 2%</string>
    <string name = "three_to_four_percent">3-4%</string>
    <string name = "ten_percent">10%</string>
    <string name = "ninth_question">How much bigger does the uterus get during pregnancy?</string>
    <string name = "three_hundred_times">300 times</string>
    <string name = "four_hundred_times">400 times</string>
    <string name = "five_hundred_times">500 times</string>
    <string name = "tenth_question">How many months before an infant’s eye color is fixed?</string>
    <string name = "six_to_nine">6-9</string>
    <string name = "two_to_four">2-4</string>
    <string name = "five_to_seven">5-7</string>
    <string name="attend_questions_msg">Please attend all questions</string>
    <string name="score_msg">You Scored &#160;<xliff:g id="score" example="20">%d</xliff:g>%%.&#160;Congrats&#160; <xliff:g id="name" example="Swaroop">%s</xliff:g> </string>
    <string name="reset_msg">Quiz is reset and ready to attempt</string>
    <string name="reset_quiz">Reset</string>
    <string name="submit_quiz">Submit</string>
    <string name="your_name_txt">Enter Your Name</string>
    <string name="your_answer_txt">Enter Your Answer Here</string>
    <string name="enter_name_msg">Enter your Name</string>
    <string name="first_question_answer">Pink</string>
</resources>
